# Open_shop

./: .dockerignore  .gitignore  Dockerfile  Makefile  TODO  docker-compose.yaml  pyproject.toml
apps/: __init__.py
apps/managment/commands/: __init__.py  adds.py
apps/products/: admin.py  models.py  serializers.py  urls.py  views.py
apps/products/fixtures/: categories.json  data.json  products.json
apps/products/migrations/: 0001_initial.py
apps/shared/: models.py
apps/users/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
apps/users/fixtures/: users.json
apps/users/migrations/: 0001_initial.py
apps/users/models/: managers.py  users.py
apps/users_1/: admin.py  apps.py  serializers.py  urls.py  views.py
apps/users_1/migrations/: 0001_initial.py
apps/users_1/models/: base.py  user.py
env/: .env.example  .env.prod
locale/en/LC_MESSAGES/: django.mo  django.po
locale/uz/LC_MESSAGES/: django.mo  django.po
root/: settings.py  urls.py
templates/admin/: login.html
